--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,11 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Add animation to "page content" */
 
+.log
+{
+ position: relative;
+width: 75%;
+}
 .animate-bottom {
   position: relative;
   -webkit-animation-name: animatebottom;
